--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,12 @@ pydantic
 pydantic-settings
 python-dotenv
 
-#Utillities
+# Utilities
 tenacity
 tqdm
-gradio
+
+# Web framework (FastAPI + React)
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+sse-starlette>=2.0.0
+python-multipart>=0.0.6
